<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain"
    android:layout_gravity="center"
    android:id="@+id/layout"
    tools:context=".LoginActivity"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bad_script"
        android:text="@string/pantry_plan"
        android:textColor="#3EFF8B"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/pot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bad_script"
        android:text="Pantry Plan"
        android:textColor="#6331E177"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/circle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/border"
        android:contentDescription="@string/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/inner_border"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:contentDescription="@string/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/pot"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@mipmap/icon_pot"
        android:backgroundTint="#3EFF8B"
        android:contentDescription="@string/border_circle"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:background="@drawable/border_circle"
        android:backgroundTint="#3EFF8B"
        app:layout_constraintBottom_toBottomOf="@+id/circle1"
        app:layout_constraintEnd_toEndOf="@+id/circle1"
        app:layout_constraintStart_toStartOf="@+id/circle1"
        app:layout_constraintTop_toTopOf="@+id/circle1" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:background="@drawable/border_circle"
        android:backgroundTint="#3EFF8B"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginBottom="12dp"
        android:background="#FFFFFF"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:orientation="horizontal"
        android:paddingLeft="2dp"
        android:textColor="#000000"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegPW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRegPW"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:orientation="horizontal"
        android:paddingLeft="2dp"
        android:textColor="#000000"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="@font/abril_fatface"
        app:layout_constraintBottom_toTopOf="@+id/textViewSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="30dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textViewSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="128dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/new_user_sign_up_here"
        android:textColor="#4CAF50"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in"
        android:textSize="15sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/forgot_password_click_here"
        android:textColor="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>